@@ -3,6 +3,10 @@ package com.nhl.link.etl;
 import org.apache.cayenne.DataObject;
 import org.apache.cayenne.exp.Property;
 
+import com.nhl.link.etl.annotation.AfterSourceRowsConverted;
+import com.nhl.link.etl.annotation.AfterSourcesMapped;
+import com.nhl.link.etl.annotation.AfterTargetMerged;
+import com.nhl.link.etl.load.LoadListener;
 import com.nhl.link.etl.mapper.Mapper;
 
 /**
@@ -10,6 +14,7 @@ import com.nhl.link.etl.mapper.Mapper;
  * 
  * @since 1.3
  */
+@SuppressWarnings("deprecation")
 public interface CreateOrUpdateBuilder<T> {
 
 	/**
@@ -66,14 +71,20 @@ public interface CreateOrUpdateBuilder<T> {
 
 	/**
 	 * Adds a listener of ETL target events.
-	 */
-	CreateOrUpdateBuilder<T> targetListener(TargetListener<T> listener);
-
-	/**
-	 * @deprecated since 1.3 in favor of {@link #targetListener(TargetListener)}
-	 *             .
+	 * 
+	 * @deprecated since 1.3 in favor of stage listeners.
 	 */
 	@Deprecated
-	CreateOrUpdateBuilder<T> withListener(TargetListener<T> listener);
+	CreateOrUpdateBuilder<T> withListener(LoadListener<T> listener);
+
+	/**
+	 * Adds a listener of transformation stages of batch segments. It should
+	 * have methods annotated with {@link AfterSourceRowsConverted},
+	 * {@link AfterSourcesMapped}, {@link AfterTargetMerged},
+	 * {@link AfterSourcesMapped}, etc.
+	 * 
+	 * @since 1.3
+	 */
+	CreateOrUpdateBuilder<T> stageListener(Object listener);
 
 }
