@@ -1,11 +1,11 @@
-package com.nhl.link.etl.runtime.task.createorupdate;
+package com.nhl.link.etl;
 
 import java.util.List;
 import java.util.Map;
 
 import org.apache.cayenne.ObjectContext;
 
-import com.nhl.link.etl.Row;
+import com.nhl.link.etl.runtime.task.createorupdate.CreateOrUpdateTuple;
 
 /**
  * @since 1.3
