@@ -1,10 +1,20 @@
 package com.nhl.link.etl.load;
 
-import com.nhl.link.etl.TargetListener;
+import java.util.Map;
+
+import com.nhl.link.etl.Execution;
 
 /**
- * @deprecated since 1.3 in favor of {@link TargetListener} interface.
+ * A listener for target merge events.
+ * 
+ * @since 1.1
+ * @deprecated since 1.3 use one of the stage listeners, e.g.
+ * @AfterTargetMatched.
  */
-public interface LoadListener<T> extends TargetListener<T> {
+@Deprecated
+public interface LoadListener<T> {
 
+	void targetCreated(Execution e, Map<String, Object> source, T target);
+
+	void targetUpdated(Execution e, Map<String, Object> source, T target);
 }
