@@ -1,33 +1,36 @@
 package com.nhl.link.etl.runtime.task.createorupdate;
 
-import java.util.Map;
-
+import com.nhl.link.etl.CreateOrUpdateSegment;
 import com.nhl.link.etl.Execution;
-import com.nhl.link.etl.TargetListener;
+import com.nhl.link.etl.annotation.AfterTargetMerged;
+import com.nhl.link.etl.stats.ExecutionStats;
 
 /**
- * A {@link TargetListener} that collects load stats and places them in the
- * execution. It is intentionally generics-free to work with any kind of root
- * entities.
+ * A listener that collects load stats and places them in the execution. It is
+ * intentionally generics-free to work with any kind of root entities.
  * 
  * @since 1.1
  */
-@SuppressWarnings("rawtypes")
-class StatsLoadListener implements TargetListener {
+public class StatsLoadListener {
 
-	private static final TargetListener instance = new StatsLoadListener();
+	private static final StatsLoadListener instance = new StatsLoadListener();
 
-	public static TargetListener instance() {
+	public static StatsLoadListener instance() {
 		return instance;
 	}
 
-	@Override
-	public void targetCreated(Execution e, Map source, Object target) {
-		e.getStats().incrementCreated(1);
-	}
+	@AfterTargetMerged
+	public void targetCreated(Execution e, CreateOrUpdateSegment<?> segment) {
 
-	@Override
-	public void targetUpdated(Execution e, Map source, Object target) {
-		e.getStats().incrementUpdated(1);
+		ExecutionStats stats = e.getStats();
+
+		for (CreateOrUpdateTuple<?> t : segment.getMerged()) {
+			if (t.isCreated()) {
+				stats.incrementCreated(1);
+			} else {
+				stats.incrementUpdated(1);
+			}
+
+		}
 	}
 }
