@@ -6,6 +6,7 @@ Release 1.3
 #28 Refactor TaskBuilder to be able to split it into specialized builders 
 #30 Execution refactoring: split stats in a separate class
 #31 Execution: support for a map of arbitrary 'attributes'
+#32 Task stage listeners
 
 Release 1.2 2014-12-08
 
